4.20

- Fixed: Saving the player gear layout when closing arsenal to the server was missing side parameter which broke it