@@ -368,14 +368,14 @@ d_all_p_a_boxes = [];
 
 if !(d_ammo_boxes isEqualTo []) then {
 	{
-		private _boxnew = _x # 0;
+		private _boxnew = _x # 1;
 		_boxnew enableRopeAttach false;
 #ifndef __TT__
 		[_boxnew] call d_fnc_weaponcargo;
 #else
-		[_boxnew, _x # 2] call d_fnc_weaponcargo;
-		if (d_player_side != _x # 2) then {
-			deleteMarkerLocal (_x # 1);
+		[_boxnew, _x # 3] call d_fnc_weaponcargo;
+		if (d_player_side != _x # 3) then {
+			deleteMarkerLocal (_x # 2);
 		};
 #endif
 	} forEach (d_ammo_boxes select {_x isEqualType []});
