@@ -1,3 +1,7 @@
 4.20
 
+- Added: Parameters for enemy spawn radius for AI which occupies buildings
+- Changed: Shorter names for some classes in CfgParams (note that you have to check your DB params too; best to recreate them completely)
 - Fixed: Saving the player gear layout when closing arsenal to the server was missing side parameter which broke it
+- Fixed: Sometimes dropped box markers did not get deleted
+- Fixed: Removed binoculars from enemy AI group leaders so that they don't run around with a bino in their hands constantly
